fix(Navbar) Dropdown width on IE11 (#1574)

--- a/packages/theme/src/theme/_navbar.scss
+++ b/packages/theme/src/theme/_navbar.scss
@@ -23,10 +23,5 @@
 
 	&-nav {
 		display: flex;
-
-		li {
-			display: flex;
-			align-items: center;
-		}
 	}
 }
